--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,22 +7,14 @@ on:
       - src/**
 
 jobs:
-  build:
+  clippy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: table
-      - name: build
-        uses: actions-rs/cargo@v1
+          components: clippy
+      - uses: giraffate/clippy-action@v1
         with:
-          command: build
-      - name: test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-      - name: lint
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: "github-pr-review"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
