--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ directories = "4.0.1"
 toml = "0.5.2"
 serde = "1.0.136"
 serde_derive = "1.0.136"
-clap = "3.0"
+clap = { version = "4.5.4", features = ["derive"] }
 walkdir = "2.4"
 chrono = { version = "0.4.31", features = ["serde"] }
 
